fix: Price is missing in dark mode (#2799)

--- a/frontend/web/styles/project/_PricingPage.scss
+++ b/frontend/web/styles/project/_PricingPage.scss
@@ -43,6 +43,11 @@
 		}
 	}
 }
+.dark {
+	.pricing-type {
+		color: #d8d8d8;
+	}
+}
 .pricing-type {
 	color: #22354a;
 	margin-bottom: 0;
